adds images, resource pages, and state applications pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <![endif] -->
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/master-styles.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
@@ -78,7 +78,7 @@
                     <li><a href="resources/sbdc.html">SBDC</a></li>
                     <li><a href="resources/ndbp.html" target="_blank">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="resources/professional-services.html">Legal Services</a></li>
                     <li><a href="resources/all-applications.html">All Applications</a></li>
                     <li><a href="resources/resources.html">All Resources</a></li>
                   </ul>
@@ -103,11 +103,12 @@
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
         <!-- <li data-target="#myCarousel" data-slide-to="2"></li> -->
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="images/president-slider.jpg" alt="First slide">
+          <img class="first-slide" src="images/president-slider.jpg" alt="President Remengesau">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>Message from the President</h1> -->
@@ -117,11 +118,21 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="images/flags.jpg" alt="Foreign Flags">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Investments Palau Values</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <h1>Foreign Investor?</h1>
+              <p>Click here to learn more about the specific requirements for businesses from abroad.</p>
+              <p><a class="btn btn-sm btn-default" href="#" role="button">Learn more</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="images/professional-services.jpg" alt="Professional Services">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Legal Services</h1>
+              <p>Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
               <p><a class="btn btn-sm btn-default" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -148,7 +159,7 @@
       <div class="row featurette">
         <div class="col-md-8">
           <h2>Why invest in Palau?</h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. <a href="why-palau.html">Learn more about Palau. ></a></p>
         </div>
         <div class="col-md-4">
           <!-- <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image"> -->
@@ -161,7 +172,7 @@
       <div class="row featurette">
         <div class="col-md-8 col-md-push-4">
           <h2>Thriving business opportunities await.</h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. <a href="incentives.html">Read more. ></a></p>
         </div>
         <div class="col-md-4 col-md-pull-8">
           <img class="featurette-image img-responsive center-block" src="images/image.png" alt="Generic placeholder image">
@@ -172,8 +183,8 @@
 
       <div class="row featurette">
         <div class="col-md-8">
-          <h2>How do I start the process?</h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2>How do I begin?</h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. <a href="process/start-business.html">Start the process here. ></a></p>
         </div>
         <div class="col-md-4">
           <img class="featurette-image img-responsive center-block" src="images/image.png" alt="Generic placeholder image">
