--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +78,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -172,6 +172,18 @@
           </ol>
           <p>This information is necessary to complete a FIAC application, available <a href="../applications/national/fiac.pdf" target="_blank">here.</a> Submit completed applications to the Foreign Investment Board. Guidelines for the completion of the FIAC application can be found 
           <a href="../applications/national/fib-requirement.pdf" target="_blank">here.</a>
+
+          
+          <h3 class="contact-info-bottom">Contact</h3>
+
+          <div class="row step-container contact-info-bottom">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-phone-alt"></span>
+            </div>
+            <span class="step-content">
+              <h5>Foreign Investment Board</h5>
+              <span class="phone-number">+680 488-1135</span>
+          </div>
         </div>
       </div>
       <!-- End main content area -->
