--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -26,12 +26,12 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
 
-  <div id="topColor">
+    <div id="topColor">
     </div>
 
     <div class="container">
@@ -78,7 +78,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -143,13 +143,23 @@
                     Building Permit
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="utilities.html">
+                <tr class="clickable-row last-row" data-href="utilities.html">
                   <td></td>
                   <td class="number-column">
                     6
                   </td>
                   <td>
                     Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table state-applications-table table-hover">
+              <tbody>
+                <tr class="clickable-row last-row" data-href="state-applications.html">
+                  <td></td>
+                  <td>
+                    State Applications
                   </td>
                 </tr>
               </tbody>
@@ -166,7 +176,7 @@
         </div>
 
         <div class="col-md-9 content">
-          <h1 class="title">Incorporation and Licensing</h1>
+          <h1 class="process-title">Incorporation and Licensing</h1>
           <h4>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</h4>
 
           <h3>Steps</h3>
@@ -209,7 +219,7 @@
               <span class="glyphicon glyphicon-file"></span>
             </span>
             <span class="step-content">
-              Local requirements and contact information for state authorities can be found on the <a href="">State Licensing and Zoning Requirements</a> page.
+              Local requirements and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
 
@@ -222,8 +232,23 @@
             <span class="step-content">
               The corporate registration fee is US $XX<br />
               The application fee for a Federal business license is US$XX.<br />
-              Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="">State process page</a> for more details.
+              Application fees for state business licenses vary depending on the State and the types and number of licenses needed. Visit the <a href="state-applications.html">State process page</a> for more details.
             </span>
+          </div>
+
+          <h3 class="contact-info-bottom">Contact</h3>
+
+          <div class="row step-container contact-info-bottom">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-phone-alt"></span>
+            </div>
+            <span class="step-content">
+              <h5>Office of the Attorney General</h5>
+              <span class="phone-number">+680 XXX-XXXX</span>
+              <h5>Bureau of the Treasury</h5>
+              <span class="phone-number">+680 XXX-XXXX</span>
+              <h5>Division of Revenue and Taxation</h5>
+              <span class="phone-number">+680 488-2465</span>
           </div>
 
         </div>
