--- a/process/state-applications.html
+++ b/process/state-applications.html
@@ -107,7 +107,7 @@
                     Incorporation and Licensing
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="#">
+                <tr class="clickable-row" data-href="immigration-labor.html">
                   <td></td>
                   <td class="number-column">
                     2
@@ -156,7 +156,7 @@
             </table>
             <table class="table state-applications-table table-hover">
               <tbody>
-                <tr class="clickable-row last-row" data-href="state-applications.html">
+                <tr class="clickable-row last-row" data-href="#">
                   <td></td>
                   <td>
                     State Applications
@@ -165,90 +165,95 @@
               </tbody>
             </table>
           </div>
-          <div class="contact-info-left">
-            <h5>Buearu of Immigration</h5>
-            <span class="phone-number">+680 488-2498</span>
-            <h5>Social Security Administration</h5>
-            <span class="phone-number">+680 XXX-XXXX</span>
-            <h5>Ministry of Justice, Division of Labor</h5>
-            <span class="phone-number">+680 488-4331</span>
-          </div>
         </div>
 
-
         <div class="col-md-9 content">
-          <h1 class="process-title">Immigration and Labor</h1>
-          <h4>Palau's labor regulations are designed to benefit both employers and our diverse workforce.</h4>
-
-          <h3>Steps</h3>
-
-          <div class="row step-container">
-            <span class="step-number">1</span>
-            <span class="step-content">
-              Apply for an investor's travel visa from the Department of Immigration, if needed.
-            </span>
-          </div>
-
-          <div class="row step-container">
-            <span class="step-number">2</span>
-            <span class="step-content">
-              Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN), available <a href="../applications/national/employee-number-application.pdf" target="_blank">here</a>.
-            </span>
-          </div>
-
-          <div class="row step-container">
-            <span class="step-number">3</span>
-            <span class="step-content">
-              Complete an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed. The nonresident worker application is available <a href="../applications/national/nonresident-worker-application.pdf" target="_blank">here</a>.
-            </span>
-          </div>
-
-
-          <h3>Materials</h3>
-
-          <div class="row step-container">
-            <span class="step-number">
-              <span class="glyphicon glyphicon-file"></span>
-            </span>
-            <span class="step-content">
-              Information required to register your company's Palauan employees with the Social Security Administration includes:
-              <ul>
-                <li>Name</li>
-                <li>Address</li>
-                <li>Individual Social Security Number
-                </li>
-              </ul>
-            </span>
-          </div>
-
-
-          <h3>Fees</h3>
-
-          <div class="row step-container">
-            <div class="step-number">
-              <span class="glyphicon glyphicon-usd"></span>
-            </div>
-            <span class="step-content">
-              The visa application fee is US $XX.<br />
-              The Social Security registration fee is US $XX.
-            </span>
-          </div>
-
-          <h3 class="contact-info-bottom">Contact</h3>
-
-          <div class="row step-container contact-info-bottom">
-            <div class="step-number">
-              <span class="glyphicon glyphicon-phone-alt"></span>
-            </div>
-            <span class="step-content">
-              <h5>Buearu of Immigration</h5>
-              <span class="phone-number">+680 488-2498</span>
-              <h5>Social Security Administration</h5>
-              <span class="phone-number">+680 XXX-XXXX</span>
-              <h5>Ministry of Justice, Division of Labor</h5>
-              <span class="phone-number">+680 488-4331</span>
-          </div>
+          <h1 class="process-title">State Applications</h1>
           
+          <ul>
+            <li><a href="../applications/state/aimeliik/aimeliik-business-license.pdf" target="_blank">
+              Aimeliik State Business License
+            </a></li>
+            <li><a href="../applications/state/aimeliik/aimeliik-building permit.pdf" target="_blank">
+              Aimeliik State Building Permit
+            </a></li>
+            <li><a href="../applications/state/airai/airai-business-license.pdf" target="blank">
+              Airai State Business License
+            </a></li>
+            <li><a href="../applications/state/airai/airai-building-permit.pdf" target="_blank">
+              Airai State Building Permit
+            </a></li>
+            <li><a href="../applications/state/angaur/angaur-business-license.pdf" target="_blank">
+              Angaur State Business License
+            </a></li>
+            <li><a href="">
+              Hatohobei State Business License
+            </a></li>
+            <li><a href="../applications/state/kayangel/kayangel-business-license.pdf" target="_blank">
+              Kayangel State Business License
+            </a></li>
+            <li><a href="../applications/state/koror/koror-business-license.pdf" target="_blank">
+              Koror State Business License
+            </a></li>
+            <li><a href="../applications/state/koror/koror-building-zoning-permit.pdf" target="_blank">
+              Koror State Building and Zoning Permit
+            </a></li>
+            <li><a href="">
+              Koror State Signage Permit
+            </a></li>
+            <li><a href="../applications/state/koror/koror-checklist.pdf" target="_blank">
+              Koror State Building and Zoning Checklist
+            </a></li>
+            <li><a href="../applications/state/melekeok/melekeok-business-license.pdf" target="_blank">
+              Melekeok State Business License
+            </a></li>
+            <li><a href="../applications/state/melekeok/melekeok-building-permit.pdf" target="_blank">
+              Melekeok State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngaraard/ngaraard-buisness-license.pdf" target="_blank">
+              Ngaraard State Business License
+            </a></li>
+            <li><a href="../applications/state/ngaraard/ngaraard-building-permit.pdf" target="_blank">
+              Ngaraard State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngarchelong/ngarchelong-business-license.pdf" target="_blank">
+              Ngarchelong State Business License
+            </a></li>
+            <li><a href="../applications/state/ngarchelong/narchelong-building-perpmit.pdf" target="_blank">
+              Ngarchelong State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngardmau/ngardmau-business-license.pdf" target="_blank">
+              Ngardmau State Business License
+            </a></li>
+            <li><a href="../applications/state/ngardmau/ngardmau-building-permit.pdf" target="_blank">
+              Ngardmau State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngeremlengui/ngeremlengui-business-license.pdf" target="_blank">
+              Ngeremlengui State Business License
+            </a></li>
+            <li><a href="../applications/state/ngeremlengui/ngeremlengui-building-permit.pdf" target="_blank">
+              Ngeremlengui State Building Permit
+            </a></li>
+            <li><a href="../applications/state/ngatpang/ngatpang-business-license.pdf" target="_blank">
+              Ngatpang State Business License
+            </a></li>
+            <li><a href="../applications/state/ngchesar/ngchesar-business-license.pdf" target="_blank">
+              Ngchesar State Business License
+            </a></li>
+            <li><a href="../applications/state/ngiwal/ngiwal-business-license.pdf" target="_blank">
+              Ngiwal State Business License
+            </a></li>
+            <li><a href="../applications/state/peleliu/peleliu-business-license.pdf" target="_blank">
+              Peleliu State Business License
+            </a></li>
+            <li><a href="../applications/state/peleliu/peleliu-building-permit.pdf" target="_blank">
+              Peleliu State Building Permit
+            </a></li>
+            <li><a href="">
+              Sonsorol State Business License
+            </a></li>
+          </ul>
+
         </div>
       </div>
       <!-- End main content area -->
