--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +78,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
                     <li><a href="../resources/all-application.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -143,13 +143,23 @@
                     Building Permit
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="utilities.html">
+                <tr class="clickable-row last-row" data-href="utilities.html">
                   <td></td>
                   <td class="number-column">
                     6
                   </td>
                   <td>
                     Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table state-applications-table table-hover">
+              <tbody>
+                <tr class="clickable-row last-row" data-href="state-applications.html">
+                  <td></td>
+                  <td>
+                    State Applications
                   </td>
                 </tr>
               </tbody>
@@ -163,7 +173,7 @@
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="title">Clearance: Title and Cultural Affairs</h1>
+          <h1 class="process-title">Clearance: Title and Cultural Affairs</h1>
           <h4>Business has long been a part of Palauan culture. Our modern businesses coexist with–and make use of–Palau's land and cultural traditions.</h4>
 
 
@@ -213,6 +223,19 @@
               There is no fee for the title report issued by the Bureau of Land and Survey.<br />
               The application fee for Cultural Affairs clearance is US $XX.
             </span>
+          </div>
+
+          <h3 class="contact-info-bottom">Contact</h3>
+
+          <div class="row step-container contact-info-bottom">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-phone-alt"></span>
+            </div>
+            <span class="step-content">
+              <h5>Bureau of Lands and Surveys</h5>
+              <span class="phone-number">+680 488-2332</span>
+              <h5>Ministry of Cultural Affairs</h5>
+              <span class="phone-number">+680 488-2489</span>
           </div>
 
         </div>
