--- a/process/utilities.html
+++ b/process/utilities.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +78,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -143,13 +143,23 @@
                     Building Permit
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="#">
+                <tr class="clickable-row last-row" data-href="#">
                   <td></td>
                   <td class="number-column">
                     6
                   </td>
                   <td>
                     Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table state-applications-table table-hover">
+              <tbody>
+                <tr class="clickable-row last-row" data-href="state-applications.html">
+                  <td></td>
+                  <td>
+                    State Applications
                   </td>
                 </tr>
               </tbody>
@@ -161,8 +171,8 @@
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="title">Utilities</h1>
-          <h4>All businesses must comply with Palau's utilities regulations.</h4>
+          <h1 class="process-title">Utilities</h1>
+          <h4>Palau's public utilities infrastructure is expanding every year, and PPUC keeps it going and growing.</h4>
 
 
           <h3>Steps</h3>
@@ -183,13 +193,7 @@
             <span class="step-content">
               Request permanent connection (and meter location) at least one week prior to date of business opening.
             </span>
-          </div>
-          <div class="row step-container">
-            <span class="step-number">4</span>
-            <span class="step-content">
-              The PPUC Application is available <a href="../applications/national/ppuc-application.pdf">here</a>.
-            </span>
-          </div>          
+          </div>         
 
 
           <h3>Materials</h3>
@@ -199,7 +203,7 @@
               <span class="glyphicon glyphicon-file"></span>
             </span>
             <span class="step-content">
-              Donec id elit non mi porta gravida at eget metus.
+              The PPUC Application is available <a href="../applications/national/ppuc-application.pdf" target="_blank">here</a>.
             </span>
           </div>
 
@@ -212,8 +216,19 @@
             </div>
             <span class="step-content">
               The application fee for a new service contract is US $50 plus a refundable (after one year) security deposit.<br />
-              The meter base relocation fee is US $15 (plus and relocation-related expenses).
+              The meter base relocation fee is US $15 (plus any relocation-related expenses).
             </span>
+          </div>
+
+          <h3 class="contact-info-bottom">Contact</h3>
+
+          <div class="row step-container contact-info-bottom">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-phone-alt"></span>
+            </div>
+            <span class="step-content">
+              <h5>Palau Public Utilities Corporation</h5>
+              <span class="phone-number">+680 488-3870</span>
           </div>
 
         </div>
