--- a/resources/government-directory.html
+++ b/resources/government-directory.html
@@ -79,7 +79,7 @@
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="professional-services.html">Legal Services</a></li>
-                    <li><a href="all-applications.html">Applications</a></li>
+                    <li><a href="all-applications.html">All Applications</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
                 </li>
@@ -110,7 +110,7 @@
                     Small Business Development Center
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="#">
+                <tr class="clickable-row" data-href="ndbp.html">
                   <td></td>
                   <td>
                     National Development Bank of Palau
@@ -134,7 +134,7 @@
                     All Applications
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="government-directory.html">
+                <tr class="clickable-row" data-href="#">
                   <td></td>
                   <td>
                     Government Directory
@@ -145,17 +145,9 @@
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="process-title">
-            National Development Bank of Palau
-          </h1>
-
-          <img src="../images/ndbp.gif" class="img-responsive logo pull-right">
-
+          <h1 class="process-title">Government Directory</h1>
           <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            <a href="">
-            Click here to visit the National Development Bank of Palau website.
-            </a>
+            "Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
           </p>
         </div>
       </div>
