--- a/resources/sbdc.html
+++ b/resources/sbdc.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +78,7 @@
                     <li><a href="sbdc.html">SBDC</a></li>
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="legal-services.html">Legal Services</a></li>
+                    <li><a href="professional-services.html">Legal Services</a></li>
                     <li><a href="all-applications.html">Applications</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
@@ -91,52 +91,69 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="secondary-nav-div" class="col-md-3">
-          <h3>
-            Resources
-          </h3>
-          <table class="table secondary-nav-table table-hover">
-            <tbody>
-              <tr class="clickable-row" data-href="pcoc.html">
-                <td></td>
-                <td>
-                  Palau Chamber of Commerce
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="#">
-                <td></td>
-                <td>
-                  Small Business Development Center
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="ndbp.html">
-                <td></td>
-                <td>
-                  National Development Bank of Palau
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="legal-services.html">
-                <td></td>
-                <td>
-                  Legal Services
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="all-applications.html">
-                <td></td>
-                <td>
-                  All Applications
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-md-3">
+          <div id="secondary-nav-div">
+            <h3>
+              Resources
+            </h3>
+            <table class="table secondary-nav-table table-hover">
+              <tbody>
+                <tr class="clickable-row" data-href="pcoc.html">
+                  <td></td>
+                  <td>
+                    Palau Chamber of Commerce
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="#">
+                  <td></td>
+                  <td>
+                    Small Business Development Center
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="ndbp.html">
+                  <td></td>
+                  <td>
+                    National Development Bank of Palau
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="professional-services.html">
+                  <td></td>
+                  <td>
+                    Professional Services
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="notarial-services.html">
+                  <td></td>
+                  <td>
+                    Notarial Services
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="all-applications.html">
+                  <td></td>
+                  <td>
+                    All Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="government-directory.html">
+                  <td></td>
+                  <td>
+                    Government Directory
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="title">Small Business Development Center</h1>
+          <h1 class="process-title">Small Business Development Center</h1>
+
+          <img src="../images/sbdc.png" class="img-responsive logo pull-right">
+
           <h3>Introducing Palau SBCD</h3>
           <p>
-            The Palau Small Business Development Center (Palau SBDC) is a member of the University of Guam Pacific Islands Small Business Development Center Network (PISBDCN). The Palau SBDC is funded in part through a Cooperative Agreement with the U.S. Small Business Administration (SBA) and by the Palau National Government through the Ministry of Public Infrastructure, Industries, & Commerce (MPIIC).
+            The Palau Small Business Development Center (Palau SBDC) is a member of the University of Guam Pacific Islands Small Business Development Center Network (PISBDCN). The Palau SBDC is funded in part through a Cooperative Agreement with the U.S. Small Business Administration (SBA) and by the Palau National Government through the Ministry of Public Infrastructure, Industries, &amp; Commerce (MPIIC).
           </p>
-          <h3>SBDC Mission & Vision</h3>
+          <h3>SBDC Mission &amp; Vision</h3>
           <h4>Mission:</h4>
           <p>
             The mission of PISBDCN is to support the growth and economic development of the U.S. affiliated islands in the Western Pacific region by providing high quality training and one-on-one confidential counseling to existing small business and to small business start-ups.
@@ -145,7 +162,7 @@
           <p>
             PISBDCN supports a well-established, respected, adequately funded and capable Small Business Development Center network, recognized by the public, the private sector and host entities as the preeminent economic development agency in the region providing high quality business counseling, training, and information. PISBDCN will continue to build strong, effective, and functional partnerships while recognizing the cultural diversity of its constituents and will seek to overcome any barriers to their participation in the PISBDCN’s program and activities, including those arising from differences of language and culture.
           </p>
-          <h3>SBDC Mission & Vision</h3>
+          <h3>SBDC Mission &amp; Vision</h3>
           <h5>Small Business Counseling</h5>
           <ul>
             <li>One-on-one counseling to existing and startup small businesses;</li>
@@ -161,7 +178,7 @@
           <ul>
             <li>Extensive small business library</li>
             <li>Computer laboratory</li>
-            <li>Government & Local Business resource information</li>
+            <li>Government &amp; Local Business resource information</li>
           </ul>
           <h5>Community/Village Outreach</h5>
           <ul>
