--- a/process-page-template.html
+++ b/process-page-template.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
