--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +78,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -143,13 +143,23 @@
                     Building Permit
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="utilities.html">
+                <tr class="clickable-row last-row" data-href="utilities.html">
                   <td></td>
                   <td class="number-column">
                     6
                   </td>
                   <td>
                     Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table state-applications-table table-hover">
+              <tbody>
+                <tr class="clickable-row last-row" data-href="state-applications.html">
+                  <td></td>
+                  <td>
+                    State Applications
                   </td>
                 </tr>
               </tbody>
@@ -162,8 +172,8 @@
         </div>
 
         <div class="col-md-9 content">
-          <h1 class="title">Building Permit</h1>
-          <h4>All businesses must comply with state building and zoning regulations.</h4>
+          <h1 class="process-title">Building Permit</h1>
+          <h4>Each of Palau's sixteen states is unique, and each regulates its own business environment.</h4>
 
 
           <h3>Steps</h3>
@@ -171,13 +181,13 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Complete and submit an application to the relevant state for issuance of a building permit.
+              Complete and submit an application to the relevant state for issuance of a building permit. You can find relevant applications on the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
           <div class="row step-container">
             <span class="step-number">2</span>
             <span class="step-content">
-              he State of Koror requires zoning approval before issuing a building permit. For specific state requirements, see Appendix I: State Licensing and Zoning Requirements.
+              The State of Koror requires zoning approval before issuing a building permit. For specific state requirements, visit the <a href="state-applications.html">State Applications page</a>.
             </span>
           </div>
 
@@ -203,6 +213,17 @@
             <span class="step-content">
               Donec id elit non mi porta gravida at eget metus.
             </span>
+          </div>
+
+          <h3 class="contact-info-bottom">Contact</h3>
+
+          <div class="row step-container contact-info-bottom">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-phone-alt"></span>
+            </div>
+            <span class="step-content">
+              <h5>Environmental Quality Preservation Board</h5>
+              <span class="phone-number">+680 XXX-XXXX</span>
           </div>
 
         </div>
