--- a/process/environmental.html
+++ b/process/environmental.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
@@ -78,7 +78,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/legal-services.html">Legal Services</a></li>
+                    <li><a href="../resources/professional-services.html">Legal Services</a></li>
                     <li><a href="../resources/all-applications.html">All Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
@@ -143,13 +143,23 @@
                     Building Permit
                   </td>
                 </tr>
-                <tr class="clickable-row" data-href="utilities.html">
+                <tr class="clickable-row last-row" data-href="utilities.html">
                   <td></td>
                   <td class="number-column">
                     6
                   </td>
                   <td>
                     Utilities
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+            <table class="table state-applications-table table-hover">
+              <tbody>
+                <tr class="clickable-row last-row" data-href="state-applications.html">
+                  <td></td>
+                  <td>
+                    State Applications
                   </td>
                 </tr>
               </tbody>
@@ -161,7 +171,7 @@
           </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="title">Clearance: Environmental</h1>
+          <h1 class="process-title">Clearance: Environmental</h1>
           <h4>The people of Palau are committed to sustainable development with minimal environmental impact.</h4>
 
           
@@ -170,7 +180,7 @@
           <div class="row step-container">
             <span class="step-number">1</span>
             <span class="step-content">
-              Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">here</a>.
+              Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit. Part I of the application is available <a href="../applications/national/eqpb/eqpb-general-information.pdf" target="_blank">here</a>. Part II of the application is available <a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf" target="_blank">here</a>.
             </span>
           </div>
           <div class="row step-container">
@@ -202,6 +212,17 @@
             <span class="step-content">
               The application fee for an earthmoving permit is US $150.
             </span>
+          </div>
+
+          <h3 class="contact-info-bottom">Contact</h3>
+
+          <div class="row step-container contact-info-bottom">
+            <div class="step-number">
+              <span class="glyphicon glyphicon-phone-alt"></span>
+            </div>
+            <span class="step-content">
+              <h5>Environmental Quality Preservation Board</h5>
+              <span class="phone-number">+680 XXX-XXXX</span>
           </div>
 
         </div>
