--- a/resources/pcoc.html
+++ b/resources/pcoc.html
@@ -26,12 +26,12 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../css/master-styles.css" rel="stylesheet">
   </head>
 
   <body>
 
-  <div id="topColor">
+    <div id="topColor">
     </div>
 
     <div class="container">
@@ -78,7 +78,7 @@
                     <li><a href="sbdc.html">SBDC</a></li>
                     <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="legal-services.html">Legal Services</a></li>
+                    <li><a href="professional-services.html">Legal Services</a></li>
                     <li><a href="all-applications.html">Applications</a></li>
                     <li><a href="resources.html">All Resources</a></li>
                   </ul>
@@ -91,49 +91,65 @@
 
       <!-- Main content area -->
       <div class="row">
-        <div id="secondary-nav-div" class="col-md-3">
-          <h3>
-            Resources
-          </h3>
-          <table class="table secondary-nav-table table-hover">
-            <tbody>
-              <tr class="clickable-row" data-href="#">
-                <td></td>
-                <td>
-                  Palau Chamber of Commerce
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="sbdc.html">
-                <td></td>
-                <td>
-                  Small Business Development Center
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="ndbp.html">
-                <td></td>
-                <td>
-                  National Development Bank of Palau
-                </td>
-              </tr>
-              <tr class="clickable-row" data-href="legal-services.html">
-                <td></td>
-                <td>
-                  Legal Services
-                </td>
-              </tr>
-              <tr class="all-applications.html">
-                <td></td>
-                <td>
-                  All Applications
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="col-md-3">
+          <div id="secondary-nav-div">
+            <h3>
+              Resources
+            </h3>
+            <table class="table secondary-nav-table table-hover">
+              <tbody>
+                <tr class="clickable-row" data-href="#">
+                  <td></td>
+                  <td>
+                    Palau Chamber of Commerce
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="sbdc.html">
+                  <td></td>
+                  <td>
+                    Small Business Development Center
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="ndbp.html">
+                  <td></td>
+                  <td>
+                    National Development Bank of Palau
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="professional-services.html">
+                  <td></td>
+                  <td>
+                    Professional Services
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="notarial-services.html">
+                  <td></td>
+                  <td>
+                    Notarial Services
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="all-applications.html">
+                  <td></td>
+                  <td>
+                    All Applications
+                  </td>
+                </tr>
+                <tr class="clickable-row" data-href="government-directory.html">
+                  <td></td>
+                  <td>
+                    Government Directory
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
         <div class="col-md-9 content">
-          <h1 class="title">Palau Chamber of Commerce</h1>
+          <h1 class="process-title">Palau Chamber of Commerce</h1>
+
+          <img src="../images/pcoc.png" class="img-responsive logo pull-right">
+
           <h3>Who we are</h3>
-          <img src="../images/pcoc.png">
           <p>
             Established March 4, 1992, the Palau Chamber of Commerce (PCOC) is the Republic of Palau’s government recognized national private sector organization. We are a non-profit organization dedicated to advancing the interests of the private sector. We strive to be the first contact for any investors or companies looking to do business in Palau.
           </p>
@@ -152,6 +168,7 @@
           <p>
             Every member is able and encouraged to participate in the various committees and groups, such as the Palau Labor Advisory Group, which is developing a new labor law for Palau. Through participation in our Policy Committee, your business will be able to shape Chamber policies and recommendations on proposed legislation and shape the development and the overall direction of our island nation.
           </p>
+        </div>
       </div>
       <!-- End main content area -->
 
