removes images from repo

--- a/process/incorporation-licensing.html
+++ b/process/incorporation-licensing.html
@@ -211,6 +211,12 @@
               Submit an application for a Federal business license, available <a href="../applications/national/national-business-license.pdf" target="_blank">here</a>.
             </span>
           </div>
+          <div class="row step-container">
+            <span class="step-number">6</span>
+            <span class="step-content">
+              Submit an business license application for each state in which you desire to do business. Local requirements, applications, and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
+            </span>
+          </div>
 
           <h3>Materials</h3>
 
@@ -219,7 +225,7 @@
               <span class="glyphicon glyphicon-file"></span>
             </span>
             <span class="step-content">
-              Local requirements and contact information for state authorities can be found on the <a href="state-applications.html">State Applications page</a>.
+              Donec id elit non mi porta gravida at eget metus.
             </span>
           </div>
 
